Fix g+ icon truncation in fallback mode

--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -60,68 +60,68 @@
 
 .i-gplus { background-position: -513px -9px; width: 24px; height: 21px; }
 
-.i-guardian-logo { background-position: -420px -30px; width: 108px; height: 20px; }
+.i-guardian-logo { background-position: -420px -31px; width: 108px; height: 20px; }
 
-.i-guardian-picks { background-position: -528px -30px; width: 15px; height: 47px; }
+.i-guardian-picks { background-position: -528px -31px; width: 15px; height: 47px; }
 
-.i-image-white { background-position: -544px -30px; width: 12px; height: 9px; }
+.i-image-white { background-position: -544px -31px; width: 12px; height: 9px; }
 
-.i-image { background-position: -557px -30px; width: 12px; height: 9px; }
+.i-image { background-position: -557px -31px; width: 12px; height: 9px; }
 
-.i-liveblog-pause { background-position: -544px -40px; width: 30px; height: 30px; }
+.i-liveblog-pause { background-position: -544px -41px; width: 30px; height: 30px; }
 
-.i-liveblog-play { background-position: -544px -71px; width: 30px; height: 30px; }
+.i-liveblog-play { background-position: -544px -72px; width: 30px; height: 30px; }
 
-.i-livequote-after { background-position: -8px -102px; width: 37px; height: 20px; }
+.i-livequote-after { background-position: -8px -103px; width: 37px; height: 20px; }
 
-.i-livequote-before { background-position: -46px -102px; width: 37px; height: 20px; }
+.i-livequote-before { background-position: -46px -103px; width: 37px; height: 20px; }
 
-.i-local-nav-arrow { background-position: -84px -102px; width: 49px; height: 37px; }
+.i-local-nav-arrow { background-position: -84px -103px; width: 49px; height: 37px; }
 
-.i-mail { background-position: -134px -102px; width: 28px; height: 20px; }
+.i-mail { background-position: -134px -103px; width: 28px; height: 20px; }
 
-.i-menu-active { background-position: -163px -102px; width: 18px; height: 12px; }
+.i-menu-active { background-position: -163px -103px; width: 18px; height: 12px; }
 
-.i-menu { background-position: -182px -102px; width: 18px; height: 12px; }
+.i-menu { background-position: -182px -103px; width: 18px; height: 12px; }
 
-.i-play { background-position: -201px -102px; width: 10px; height: 12px; }
+.i-play { background-position: -201px -103px; width: 10px; height: 12px; }
 
-.i-powered-by-ee { background-position: -212px -102px; width: 68px; height: 31px; }
+.i-powered-by-ee { background-position: -212px -103px; width: 68px; height: 31px; }
 
-.i-profile-active { background-position: -281px -102px; width: 15px; height: 15px; }
+.i-profile-active { background-position: -281px -103px; width: 15px; height: 15px; }
 
-.i-profile { background-position: -297px -102px; width: 15px; height: 15px; }
+.i-profile { background-position: -297px -103px; width: 15px; height: 15px; }
 
-.i-quote-marks { background-position: -313px -102px; width: 64px; height: 32px; }
+.i-quote-marks { background-position: -313px -103px; width: 64px; height: 32px; }
 
-.i-quotes-green { background-position: -378px -102px; width: 56px; height: 28px; }
+.i-quotes-green { background-position: -378px -103px; width: 56px; height: 28px; }
 
-.i-recommend-inactive { background-position: -435px -102px; width: 12px; height: 12px; }
+.i-recommend-inactive { background-position: -435px -103px; width: 12px; height: 12px; }
 
-.i-recommend { background-position: -448px -102px; width: 12px; height: 12px; }
+.i-recommend { background-position: -448px -103px; width: 12px; height: 12px; }
 
-.i-red-card { background-position: -461px -102px; width: 9px; height: 12px; }
+.i-red-card { background-position: -461px -103px; width: 9px; height: 12px; }
 
-.i-search-blue { background-position: -471px -102px; width: 14px; height: 14px; }
+.i-search-blue { background-position: -471px -103px; width: 14px; height: 14px; }
 
-.i-search { background-position: -486px -102px; width: 14px; height: 14px; }
+.i-search { background-position: -486px -103px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -501px -102px; width: 6px; height: 10px; }
+.i-sport-arrow-small { background-position: -501px -103px; width: 6px; height: 10px; }
 
-.i-sport-arrow { background-position: -507px -102px; width: 9px; height: 15px; }
+.i-sport-arrow { background-position: -507px -103px; width: 9px; height: 15px; }
 
-.i-story-quote { background-position: -516px -102px; width: 49px; height: 25px; }
+.i-story-quote { background-position: -516px -103px; width: 49px; height: 25px; }
 
-.i-swipe-arrow-small { background-position: -566px -102px; width: 5px; height: 10px; }
+.i-swipe-arrow-small { background-position: -566px -103px; width: 5px; height: 10px; }
 
-.i-swipe-arrow { background-position: -572px -102px; width: 7px; height: 16px; }
+.i-swipe-arrow { background-position: -572px -103px; width: 7px; height: 16px; }
 
-.i-top-stories-active { background-position: -566px -119px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -566px -120px; width: 16px; height: 16px; }
 
-.i-top-stories { background-position: -134px -136px; width: 16px; height: 16px; }
+.i-top-stories { background-position: -134px -137px; width: 16px; height: 16px; }
 
-.i-twitter { background-position: -151px -136px; width: 25px; height: 20px; }
+.i-twitter { background-position: -151px -137px; width: 25px; height: 20px; }
 
-.i-witness-logo { background-position: -177px -136px; width: 119px; height: 16px; }
+.i-witness-logo { background-position: -177px -137px; width: 119px; height: 16px; }
 
-.i-yellow-card { background-position: -297px -136px; width: 9px; height: 12px; }
+.i-yellow-card { background-position: -297px -137px; width: 9px; height: 12px; }
